--- a/source/scss/components/_menu.scss
+++ b/source/scss/components/_menu.scss
@@ -1,93 +1,579 @@
-// Hamburger Menu Start
-.sidebar-overlay {
-    background: #00000042;
-    backdrop-filter: blur(5px);
-    filter: blur(5px);
-    height: 100%;
-    left: -100%;
+.icss {
+    --color-text: #02174e;
+    --color-bg: #333;
+    --color-link: #4d4f5f;
+    --color-link-hover: #bfb5b5;
+    --color-info: #fff;
+    --color-main-bg: #24262d;
+    --path-fill-1: #000000;
+    --path-fill-2: #1d1d1f;
+    --path-fill-3: #02174e;
+    --color-title: #fff;
+    --font-size-title: 5vmax;
+    --font-weight-title: 400;
+    --color-menu: #000000;
+    --color-menu-hover: #fff;
+    --font-weight-menu: 800;
+    --button-bg: #fff;
+    --button-circle: #ada4a4;
+    --button-line: #222;
+}
+
+main.main.main--icss {
+    z-index: 9;
+    position: relative;
+}
+
+.global-menu {
+    // width: 100vw;
+    // height: 90vh;
+    // position: fixed;
+    // top: 0;
+    // left: 35px;
+    // pointer-events: none;
+    // z-index: 100;
+    width: 100vw;
+    height: 95vh;
+    position: absolute;
+    top: 0;
+    left: 35px;
+    overflow: auto;
+    z-index: 999999;
+}
+
+#fixed-content {
+    display: none;
+    transition-delay: 0.85s;
+}
+
+.global-menu__item {
+    color: var(--color-info);
+    font-family: $poppins;
+    font-size: 30px;
+    font-weight: var(--font-weight-menu);
+    opacity: 0;
+    transform: translateY(-100%);
+    pointer-events: none;
+    display: block;
+    margin: 0em 0;
+    transition: transform 0.3s, opacity 0.3s;
+    transition-timing-function: ease-in;
+    &:hover {
+        color: var(--color-menu-hover);
+        text-decoration: none;
+    }
+}
+
+.content.content--icss {
     position: fixed;
-    width: 100%;
+}
+
+.icssglobal-menu__item--icss:nth-child(odd) {
+    transform: translateY(-100%) rotate(10deg);
+}
+
+.icssglobal-menu__item--icss:nth-child(even) {
+    transform: translateY(-100%) rotate(-10deg);
+}
+
+.global-menu__item--icss {
+    transition: transform 0.1s, opacity 0.1s;
+    transform: translateY(100%);
+    transition-timing-function: ease-out;
+}
+
+.global-menu__item.is-opened {
+    opacity: 1;
+    transform: translateY(0) rotate(0);
+    pointer-events: auto;
+    transition-timing-function: ease;
+}
+
+.global-menu__item:nth-of-type(1) {
+    transition-delay: 0s;
+}
+
+.global-menu__item.is-opened:nth-of-type(1) {
+    transition-delay: 0.85s;
+}
+
+.global-menu__item:nth-of-type(2) {
+    transition-delay: 0.05s;
+}
+
+.global-menu__item.is-opened:nth-of-type(2) {
+    transition-delay: 0.8s;
+}
+
+.global-menu__item:nth-of-type(3) {
+    transition-delay: 0.1s;
+}
+
+.global-menu__item.is-opened:nth-of-type(3) {
+    transition-delay: 0.75s;
+}
+
+.global-menu__item:nth-of-type(4) {
+    transition-delay: 0.15s;
+}
+
+.global-menu__item.is-opened:nth-of-type(4) {
+    transition-delay: 0.7s;
+}
+
+.global-menu__item:nth-of-type(5) {
+    transition-delay: 0.15s;
+}
+
+.global-menu__item.is-opened:nth-of-type(5) {
+    transition-delay: 0.90s;
+}
+
+.global-menu__item:nth-of-type(6) {
+    transition-delay: 0.20s;
+}
+
+.global-menu__item.is-opened:nth-of-type(6) {
+    transition-delay: 1s;
+}
+
+.global-menu__item:nth-of-type(7) {
+    transition-delay: 0.25s;
+}
+
+.global-menu__item.is-opened:nth-of-type(7) {
+    transition-delay: 1.2s;
+}
+
+.global-menu__item:nth-of-type(8) {
+    transition-delay: 0.28s;
+}
+
+.global-menu__item.is-opened:nth-of-type(8) {
+    transition-delay: 1.4s;
+}
+
+.global-menu__item:nth-of-type(9) {
+    transition-delay: 0.30s;
+}
+
+.global-menu__item.is-opened:nth-of-type(9) {
+    transition-delay: 1.5s;
+}
+
+.global-menu__item:nth-of-type(10) {
+    transition-delay: 0.35s;
+}
+
+.global-menu__item.is-opened:nth-of-type(10) {
+    transition-delay: 1.9s;
+}
+
+.global-menu__item:nth-of-type(11) {
+    transition-delay: 0.40s;
+}
+
+.global-menu__item.is-opened:nth-of-type(11) {
+    transition-delay: 2.1s;
+}
+
+.global-menu__item:nth-of-type(12) {
+    transition-delay: 0.40s;
+}
+
+.global-menu__item.is-opened:nth-of-type(12) {
+    transition-delay: 2.4s;
+}
+
+.global-menu__item:nth-of-type(13) {
+    transition-delay: 0.43s;
+}
+
+.global-menu__item.is-opened:nth-of-type(13) {
+    transition-delay: 2.7s;
+}
+
+.global-menu__item:nth-of-type(14) {
+    transition-delay: 0.45s;
+}
+
+.global-menu__item.is-opened:nth-of-type(14) {
+    transition-delay: 2.9s;
+}
+
+.global-menu__item--icss.is-opened {
+    transition-duration: 0.9s;
+}
+
+.global-menu__item--icss:nth-of-type(1) {
+    transition-delay: 0s;
+}
+
+.global-menu__item--icss.is-opened:nth-of-type(1) {
+    transition-delay: 0.65s;
+}
+
+.global-menu__item--icss:nth-of-type(2) {
+    transition-delay: 0s;
+}
+
+.global-menu__item--icss.is-opened:nth-of-type(2) {
+    transition-delay: 0.7s;
+}
+
+.global-menu__item--icss:nth-of-type(3) {
+    transition-delay: 0s;
+}
+
+.global-menu__item--icss.is-opened:nth-of-type(3) {
+    transition-delay: 0.75s;
+}
+
+.global-menu__item--icss:nth-of-type(4) {
+    transition-delay: 0s;
+}
+
+.global-menu__item--icss.is-opened:nth-of-type(4) {
+    transition-delay: 0.8s;
+}
+
+.shape-overlays {
+    width: 100vw;
+    height: 100vh;
+    pointer-events: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.shape-overlays.is-opened {
+    pointer-events: auto;
+}
+
+.shape-overlays__path:nth-of-type(1) {
+    fill: var(--path-fill-1);
+}
+
+.shape-overlays__path:nth-of-type(2) {
+    fill: var(--path-fill-2);
+}
+
+.shape-overlays__path:nth-of-type(3) {
+    fill: var(--path-fill-3);
+}
+
+.shape-overlays__path:nth-of-type(4) {
+    fill: var(--path-fill-4);
+}
+
+@keyframes intervalHamburgerBorder {
+    0% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    80% {
+        transform: scale(1.6);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(1.6);
+    }
+}
+
+.hamburger {
+    width: 64px;
+    height: 64px;
+    display: block;
+    cursor: pointer;
+    position: fixed;
+    top: 2.25em;
+    right: 2.25em;
+    z-index: 110;
+    border-radius: 50%;
+    background-color: var(--button-bg);
+    pointer-events: auto;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    z-index: 9999999999;
+    &::after {
+        width: 64px;
+        height: 64px;
+        box-sizing: border-box;
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        pointer-events: none;
+        border: 4px solid var(--button-circle);
+        border-radius: 50%;
+        -webkit-animation-duration: 1.2s;
+        animation-duration: 1.2s;
+        -webkit-animation-name: intervalHamburgerBorder;
+        animation-name: intervalHamburgerBorder;
+        -webkit-animation-iteration-count: infinite;
+        animation-iteration-count: infinite;
+    }
+}
+
+.hamburger__line {
+    width: 28px;
+    height: 2px;
+    overflow: hidden;
+    position: absolute;
     z-index: 10;
 }
 
-a.cta-button {
+.hamburger__line-in {
+    width: 84px;
+    height: 2px;
     position: absolute;
-    right: 101px;
-    top: 41px;
-    color: #fff;
-    border: 1px solid #1779e8;
-    padding: 6px 21px;
-    border-radius: 5px;
-    z-index: 9;
-    font-weight: bolder;
-    &:hover {
-        text-decoration: none;
-        background: #0000ff4d;
-    }
+    top: 0;
+    left: 0;
 }
 
-nav.sidebar {
-    background: linear-gradient($color-two-lignt-blue, $color-one-dark-blue);
-    color: #fff;
-    height: 100%;
-    left: -82%;
-    margin: 0;
-    padding: 20px 20px;
-    position: fixed;
-    width: 25%;
-    z-index: 2;
-    -webkit-transition: all 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67);
-    -moz-transition: all 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67);
-    transition: all 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67);
-    z-index: 999;
-    .sidebar__btn-close {
-        cursor: pointer;
-        text-align: right;
-        margin-bottom: 20px;
-    }
+.hamburger__line-in::before,
+.hamburger__line-in::after {
+    width: 28px;
+    height: 2px;
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    background-color: var(--button-line);
 }
 
-.btn-menu {
-    // background: black;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    cursor: pointer;
-    outline: none;
-    padding: 10px;
-    right: 13px;
-    top: 36px;
-    position: fixed;
-    border: none;
-    border-radius: 0;
-    line-height: 0;
-    background-image: linear-gradient(to bottom, $color-two-lignt-blue 0%, $color-one-dark-blue 100%);
-    text-decoration: none;
-    transition: all 0.2s ease;
-    z-index: 9;
+.hamburger__line-in::before {
+    left: -56px;
 }
 
-label.burger__label {
-    margin: 0;
-    i {
-        font-size: 25px;
-        cursor: pointer;
-    }
+.hamburger__line-in::after {
+    left: 0;
 }
 
-@keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+.hamburger__line--01,
+.hamburger__line--02,
+.hamburger__line--03,
+.hamburger__line--cross01,
+.hamburger__line--cross02 {
+    left: 18px;
 }
 
-@include for-phone {
-    nav.sidebar {
-        width: 75%;
-    }
+.hamburger__line--01 {
+    top: 24.6px;
 }
 
-// Hamburger Menu end
+.hamburger__line--02,
+.hamburger__line--cross01,
+.hamburger__line--cross02 {
+    top: 31px;
+}
+
+.hamburger__line--03 {
+    top: 37.4px;
+}
+
+.hamburger__line--cross01 {
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.hamburger__line--cross02 {
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+.hamburger__line {
+    -webkit-transition-duration: 0.6s;
+    transition-duration: 0.6s;
+    -webkit-transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+    transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.hamburger__line-in {
+    -webkit-transition-duration: 0.6s;
+    transition-duration: 0.6s;
+    -webkit-transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+    transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.hamburger__line-in::before,
+.hamburger__line-in::after {
+    -webkit-transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+    transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+    -webkit-transition-property: -webkit-transform;
+    transition-property: -webkit-transform;
+    transition-property: transform;
+    transition-property: transform, -webkit-transform;
+}
+
+.hamburger__line-in--cross01,
+.hamburger__line-in--cross02 {
+    -webkit-transform: translateX(-33.3%);
+    transform: translateX(-33.3%);
+}
+
+.hamburger__line-in--01 {
+    -webkit-transition-delay: 0.2s;
+    transition-delay: 0.2s;
+}
+
+.hamburger__line-in--02 {
+    -webkit-transition-delay: 0.25s;
+    transition-delay: 0.25s;
+}
+
+.hamburger__line-in--02::before,
+.hamburger__line-in--02::after {
+    -webkit-transition-delay: 0.05s;
+    transition-delay: 0.05s;
+}
+
+.hamburger__line-in--03 {
+    -webkit-transition-delay: 0.3s;
+    transition-delay: 0.3s;
+}
+
+.hamburger__line-in--03::before,
+.hamburger__line-in--03::after {
+    -webkit-transition-delay: 0.1s;
+    transition-delay: 0.1s;
+}
+
+.hamburger__line-in--cross01 {
+    -webkit-transition-delay: 0.0s;
+    transition-delay: 0.0s;
+}
+
+.hamburger__line-in--cross02 {
+    -webkit-transition-delay: 0.05s;
+    transition-delay: 0.05s;
+}
+
+.hamburger__line-in--cross02::before,
+.hamburger__line-in--cross02::after {
+    -webkit-transition-delay: 0.1s;
+    transition-delay: 0.1s;
+}
+
+.hamburger.is-opened-navi .hamburger__line-in--01,
+.hamburger.is-opened-navi .hamburger__line-in--02,
+.hamburger.is-opened-navi .hamburger__line-in--03 {
+    -webkit-transform: translateX(33.3%);
+    transform: translateX(33.3%);
+}
+
+.hamburger.is-opened-navi .hamburger__line-in--cross01,
+.hamburger.is-opened-navi .hamburger__line-in--cross02 {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+}
+
+.hamburger.is-opened-navi .hamburger__line-in--01 {
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+}
+
+.hamburger.is-opened-navi .hamburger__line-in--02 {
+    -webkit-transition-delay: 0.05s;
+    transition-delay: 0.05s;
+}
+
+.hamburger.is-opened-navi .hamburger__line-in--03 {
+    -webkit-transition-delay: 0.1s;
+    transition-delay: 0.1s;
+}
+
+.hamburger.is-opened-navi .hamburger__line-in--cross01 {
+    -webkit-transition-delay: 0.25s;
+    transition-delay: 0.25s;
+}
+
+.hamburger.is-opened-navi .hamburger__line-in--cross02 {
+    -webkit-transition-delay: 0.3s;
+    transition-delay: 0.3s;
+}
+
+.hamburger:hover .hamburger__line-in::before,
+.hamburger:hover .hamburger__line-in::after {
+    -webkit-transform: translateX(200%);
+    transform: translateX(200%);
+}
+
+.hamburger:hover .hamburger__line-in--01::before,
+.hamburger:hover .hamburger__line-in--01::after,
+.hamburger:hover .hamburger__line-in--02::before,
+.hamburger:hover .hamburger__line-in--02::after,
+.hamburger:hover .hamburger__line-in--03::before,
+.hamburger:hover .hamburger__line-in--03::after {
+    -webkit-transition-duration: 1s;
+    transition-duration: 1s;
+}
+
+.hamburger:hover .hamburger__line-in--cross01::before,
+.hamburger:hover .hamburger__line-in--cross01::after,
+.hamburger:hover .hamburger__line-in--cross02::before,
+.hamburger:hover .hamburger__line-in--cross02::after {
+    -webkit-transition-duration: 0s;
+    transition-duration: 0s;
+}
+
+.hamburger.is-opened-navi:hover .hamburger__line-in--cross01::before,
+.hamburger.is-opened-navi:hover .hamburger__line-in--cross01::after,
+.hamburger.is-opened-navi:hover .hamburger__line-in--cross02::before,
+.hamburger.is-opened-navi:hover .hamburger__line-in--cross02::after {
+    -webkit-transition-duration: 1s;
+    transition-duration: 1s;
+}
+
+.hamburger.is-opened-navi:hover .hamburger__line-in--01::before,
+.hamburger.is-opened-navi:hover .hamburger__line-in--01::after,
+.hamburger.is-opened-navi:hover .hamburger__line-in--02::before,
+.hamburger.is-opened-navi:hover .hamburger__line-in--02::after,
+.hamburger.is-opened-navi:hover .hamburger__line-in--03::before,
+.hamburger.is-opened-navi:hover .hamburger__line-in--03::after {
+    -webkit-transition-duration: 0s;
+    transition-duration: 0s;
+}
+
+@media screen and (max-width: 55em) {
+    html,
+    body {
+        overflow-x: hidden;
+        width: 100vw;
+        height: 100%;
+    }
+    .hamburger {
+        position: fixed;
+        top: 0.5em;
+        right: 0.5em;
+        transform: scale(0.75);
+    }
+    .content {
+        height: auto;
+        min-height: 0;
+        padding-bottom: 10em;
+        flex-direction: column;
+    }
+    .content--fixed {
+        position: relative;
+        z-index: 0;
+        display: block;
+        padding: 0.85em;
+    }
+    .codrops-header {
+        flex-direction: column;
+        align-items: center;
+    }
+    .codrops-header__title {
+        font-weight: bold;
+        padding-bottom: 0.25em;
+        text-align: center;
+    }
+    .github {
+        display: block;
+        margin: 1em auto;
+    }
+    .codrops-links {
+        margin: 0;
+    }
+}
