--- a/source/scss/pages/_home.scss
+++ b/source/scss/pages/_home.scss
@@ -2,10 +2,9 @@
     font-family: $heading, $sans-serif;
 }
 
-marquee {
-    color: $color-white;
-}
-
+// marquee {
+//     color: $color-white;
+// }
 .banner-head {
     // background: $color-navy-blue;
     background: linear-gradient($color-navy-blue, $transparent-navy-blue);
@@ -18,20 +17,19 @@ marquee {
     width: 100%;
 }
 
-.reveal {
-    text-align: center;
-    color: $color-white;
-    h1 {
-        font-size: 5vw;
-    }
-    h5 {
-        font-size: 30px;
-    }
-    img {
-        border-radius: 100%;
-    }
-}
-
+// .reveal {
+//     text-align: center;
+//     color: $color-white;
+//     h1 {
+//         font-size: 5vw;
+//     }
+//     h5 {
+//         font-size: 30px;
+//     }
+//     img {
+//         border-radius: 100%;
+//     }
+// }
 .large-header {
     position: relative;
     width: 100%;
@@ -52,16 +50,14 @@ marquee {
     transform: translate3d(7%, -50%, 0);
 }
 
-.heder-title {
-    text-align: center;
-    color: #fff;
-    // position: absolute;
-    margin-top: 15px;
-    h5 {
-        font-size: 18px;
-    }
-}
-
+// .heder-title {
+//     text-align: center;
+//     color: #fff;
+//     margin-top: 15px;
+//     h5 {
+//         font-size: 18px;
+//     }
+// }
 div#particles-js {
     position: relative;
     width: 100%;
@@ -172,7 +168,7 @@ canvas.particles-js-canvas-el {
     width: 100%;
     height: 100%;
     border: 10px solid $transparent-black;
-    z-index: 9;
+    z-index: 1;
     display: block;
 }
 
@@ -192,7 +188,7 @@ canvas.particles-js-canvas-el {
     margin: 0;
     padding: 0;
     transform: translateY(-50%);
-    z-index: 9;
+    z-index: 8;
 }
 
 .video-section {
@@ -381,12 +377,12 @@ button.close.close-video {
 }
 
 .one-right {
-    right: -32px;
+    // right: -32px; 
     position: inherit;
 }
 
 .one-left {
-    left: -32px;
+    // left: -32px;
     position: inherit;
 }
 
@@ -725,107 +721,4 @@ tag {
 
 /////////////////////////////////////////////////////////
 ////////////////// LOCATION CSS  END //////////////////
-/////////////////////////////////////////////////////////
-/////////////////////////////////////////////////////////
-////////////////// Footer CSS  start //////////////////
-/////////////////////////////////////////////////////////
-.footer-sec {
-    background: url('#{$cssimgpath}footer_image.png') no-repeat center center;
-    background-size: cover;
-    padding: 70px;
-    position: relative;
-}
-
-.footer-sec {
-    .sub_title {
-        a {
-            color: $color-cyan;
-            font-size: 18px;
-            font-weight: 600;
-            &:hover {
-                text-decoration: none;
-                span {
-                    color: $color-white
-                }
-            }
-        }
-        span {
-            position: relative;
-            font-weight: 400;
-            color: $color-white;
-            text-transform: uppercase;
-            font-size: 18px;
-            margin: 0 10px;
-            &:after {
-                position: absolute;
-                content: "";
-                top: 10px;
-                bottom: 0;
-                right: -12px;
-                width: 4px;
-                height: 4px;
-                background: $color-cyan;
-                border-radius: 50%;
-            }
-        }
-    }
-}
-
-.copy-text p {
-    text-align: center;
-    color: $color-white;
-    margin: 0;
-}
-
-.banner_social_link {
-    margin: 35px 0;
-    li {
-        display: inline-block;
-        margin: 0 5px;
-    }
-    a {
-        position: relative;
-        display: block;
-        width: 45px;
-        height: 45px;
-        color: #dbe3e3;
-        font-size: 22px;
-        line-height: 45px;
-        border-radius: 50%;
-        border: 1px solid $color-cyan;
-        text-decoration: none;
-        transition: 0.3s;
-        z-index: 0;
-        &:before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background: #fff;
-            border-radius: 50%;
-            -webkit-transform: scale(0);
-            transform: scale(0);
-            transition: 0.3s;
-            z-index: -1;
-        }
-    }
-}
-
-.banner_social_link a:hover:before {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-}
-
-.banner_social_link a:hover {
-    color: $color-one-dark-blue;
-}
-
-.w-text {
-    color: $color-cyan;
-}
-
-/////////////////////////////////////////////////////////
-////////////////// Footer CSS  END //////////////////
 /////////////////////////////////////////////////////////
