--- a/source/css/style.css
+++ b/source/css/style.css
@@ -892,7 +892,7 @@ canvas.particles-js-canvas-el {
 @media only screen and (max-width: 768px) {
   .heading-sub-banner h2 {
     text-align: center;
-    font-size: 25px;
+    font-size: 23px;
   }
 }
 
@@ -949,6 +949,14 @@ canvas.particles-js-canvas-el {
   text-align: justify;
 }
 
+@media only screen and (max-width: 768px) {
+  .about-content p {
+    font-size: 1rem;
+    text-align: center;
+    line-height: 1.3em;
+  }
+}
+
 @-webkit-keyframes bounce {
   0% {
     -webkit-transform: translateY(-5px);
@@ -990,6 +998,12 @@ canvas.particles-js-canvas-el {
   display: block;
   overflow: hidden;
   height: 100vh;
+}
+
+@media only screen and (max-width: 768px) {
+  .section {
+    height: 135px;
+  }
 }
 
 .blur-img {
@@ -1047,6 +1061,14 @@ canvas.particles-js-canvas-el {
           box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.45);
 }
 
+@media only screen and (max-width: 768px) {
+  .video-section {
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.45);
+            box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.45);
+  }
+}
+
 .video-wrapper,
 figure.vimeo,
 figure.youtube {
@@ -1057,6 +1079,14 @@ figure.youtube {
   height: 0;
   overflow: hidden;
   border-radius: 10px;
+}
+
+@media only screen and (max-width: 768px) {
+  .video-wrapper,
+  figure.vimeo,
+  figure.youtube {
+    border-radius: 5px;
+  }
 }
 
 figure.youtube a img,
@@ -1086,6 +1116,16 @@ figure.youtube a:after {
   cursor: url("../images/play.png") 30 30, pointer;
   -webkit-transition: all 300ms linear;
   transition: all 300ms linear;
+}
+
+@media only screen and (max-width: 768px) {
+  figure.vimeo a:after,
+  figure.youtube a:after {
+    width: 40px;
+    height: 40px;
+    top: 60%;
+    left: 55%;
+  }
 }
 
 figure.vimeo:hover a:after,
@@ -1142,6 +1182,73 @@ figure.youtube a img {
   cursor: url("../images/play.png") 30 30, pointer;
 }
 
+.modal-backdrop.show {
+  opacity: .5;
+  z-index: 8;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  -webkit-filter: blur(5px);
+          filter: blur(5px);
+}
+
+.upper-model {
+  z-index: 11;
+  height: 100vh;
+}
+
+.video-model iframe {
+  height: 93vh;
+  width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+  .video-model iframe {
+    height: auto;
+  }
+}
+
+.modal-dialog.modal-dialog-centered.modal-lg {
+  max-width: 100vw;
+  margin: 0;
+  overflow: hidden;
+}
+
+button.close.video-close {
+  margin-top: -15px;
+  margin-bottom: 5px;
+}
+
+@media only screen and (max-width: 768px) {
+  .reduce-headinggaap {
+    margin-bottom: 5px !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .neon-no-bob_gapping {
+    margin-top: 0px !important;
+    padding-top: 0px !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .neon-no-bob_gapping-two {
+    margin-top: 20px !important;
+    padding-top: 0px !important;
+    margin-bottom: 20px !important;
+    padding-bottom: 0px !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .neon-no-bob_gapping-three {
+    margin-top: 50px !important;
+    padding-top: 0px !important;
+    margin-bottom: 0px !important;
+    padding-bottom: 0px !important;
+  }
+}
+
 .counter-style {
   text-align: center;
 }
@@ -1180,36 +1287,6 @@ figure.youtube a img {
   }
 }
 
-.modal-backdrop.show {
-  opacity: .5;
-  z-index: 8;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
-  -webkit-filter: blur(5px);
-          filter: blur(5px);
-}
-
-.upper-model {
-  z-index: 11;
-  height: 100vh;
-}
-
-.video-model iframe {
-  height: 93vh;
-  width: 100%;
-}
-
-.modal-dialog.modal-dialog-centered.modal-lg {
-  max-width: 100vw;
-  margin: 0;
-  overflow: hidden;
-}
-
-button.close.video-close {
-  margin-top: -15px;
-  margin-bottom: 5px;
-}
-
 .mid-align {
   width: 85%;
   margin: 0 auto;
@@ -1221,6 +1298,12 @@ button.close.video-close {
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 4px;
+}
+
+@media only screen and (max-width: 768px) {
+  .gradint-card {
+    margin-top: 10px !important;
+  }
 }
 
 .one-right {
@@ -1304,6 +1387,15 @@ p.view-more {
   float: right;
   right: 0;
   top: 10px;
+}
+
+@media only screen and (max-width: 768px) {
+  p.view-more {
+    position: inherit;
+    float: none;
+    right: 0;
+    top: 0;
+  }
 }
 
 p.view-more a {
