--- a/source/scss/pages/_home.scss
+++ b/source/scss/pages/_home.scss
@@ -96,7 +96,7 @@ canvas.particles-js-canvas-el {
         text-transform: uppercase;
         @include for-phone {
             text-align: center;
-            font-size: 25px;
+            font-size: 23px;
         }
     }
     p {
@@ -140,6 +140,11 @@ canvas.particles-js-canvas-el {
     p {
         font-size: 18px;
         text-align: justify;
+        @include for-phone {
+            font-size: 1rem;
+            text-align: center;
+            line-height: 1.3em;
+        }
     }
 }
 
@@ -168,6 +173,9 @@ canvas.particles-js-canvas-el {
     display: block;
     overflow: hidden;
     height: 100vh;
+    @include for-phone {
+        height: 135px;
+    }
 }
 
 .blur-img {
@@ -220,6 +228,10 @@ canvas.particles-js-canvas-el {
     margin: 0 auto;
     border-radius: 10px;
     box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.45);
+    @include for-phone {
+        border-radius: 5px;
+        box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.45);
+    }
 }
 
 .video-wrapper,
@@ -232,6 +244,9 @@ figure.youtube {
     height: 0;
     overflow: hidden;
     border-radius: 10px;
+    @include for-phone {
+        border-radius: 5px;
+    }
 }
 
 figure.youtube a img,
@@ -261,6 +276,12 @@ figure.youtube a:after {
     pointer;
     -webkit-transition: all 300ms linear;
     transition: all 300ms linear;
+    @include for-phone {
+        width: 40px;
+        height: 40px;
+        top: 60%;
+        left: 55%;
+    }
 }
 
 figure.vimeo:hover a:after,
@@ -318,9 +339,73 @@ figure.youtube a img {
     pointer;
 }
 
+.modal-backdrop.show {
+    opacity: .5;
+    z-index: 8;
+    backdrop-filter: blur(5px);
+    filter: blur(5px);
+}
+
+.upper-model {
+    z-index: 11;
+    height: 100vh;
+}
+
+.video-model {
+    iframe {
+        height: 93vh;
+        width: 100%;
+        @include for-phone {
+            height: auto;
+        }
+    }
+}
+
+.modal-dialog.modal-dialog-centered.modal-lg {
+    max-width: 100vw;
+    margin: 0;
+    overflow: hidden;
+}
+
+button.close.video-close {
+    margin-top: -15px;
+    margin-bottom: 5px;
+}
+
 ////////////////////////////////////
 /////////////////////////////////// VIDEO section END /////////////////////////////////////
 ///////////////////////////////////
+.reduce-headinggaap {
+    @include for-phone {
+        margin-bottom: 5px !important;
+    }
+}
+
+.neon-no-bob_gapping {
+    @include for-phone {
+        margin-top: 0px !important;
+        padding-top: 0px !important;
+    }
+}
+
+.neon-no-bob_gapping-two {
+    @include for-phone {
+        margin-top: 20px !important;
+        padding-top: 0px !important;
+        margin-bottom: 20px !important;
+        padding-bottom: 0px !important;
+    }
+}
+
+.neon-no-bob_gapping-three {
+    @include for-phone {
+        margin-top: 50px !important;
+        padding-top: 0px !important;
+        margin-bottom: 0px !important;
+        padding-bottom: 0px !important;
+    }
+}
+
 .counter-style {
     text-align: center;
     h3 {
@@ -346,36 +431,6 @@ figure.youtube a img {
     }
 }
 
-.modal-backdrop.show {
-    opacity: .5;
-    z-index: 8;
-    backdrop-filter: blur(5px);
-    filter: blur(5px);
-}
-
-.upper-model {
-    z-index: 11;
-    height: 100vh;
-}
-
-.video-model {
-    iframe {
-        height: 93vh;
-        width: 100%;
-    }
-}
-
-.modal-dialog.modal-dialog-centered.modal-lg {
-    max-width: 100vw;
-    margin: 0;
-    overflow: hidden;
-}
-
-button.close.video-close {
-    margin-top: -15px;
-    margin-bottom: 5px;
-}
-
 /////////////////////////////////////////////////////////
 ////////////////// Why choose ICSS CSS START //////////////////
 /////////////////////////////////////////////////////////
@@ -390,6 +445,12 @@ button.close.video-close {
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 4px;
+}
+
+.gradint-card {
+    @include for-phone {
+        margin-top: 10px !important;
+    }
 }
 
 .one-right {
@@ -482,6 +543,12 @@ p.view-more {
     float: right;
     right: 0;
     top: 10px;
+    @include for-phone {
+        position: inherit;
+        float: none;
+        right: 0;
+        top: 0;
+    }
     a {
         text-decoration: none;
     }
